--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,17 @@
     font-style: normal;
 }
 
+input:focus, textarea:focus, select:focus {
+    outline: none !important;
+    --tw-ring-color: none;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 /* Custom Scrollbar untuk class tertentu */
 .custom-scroll::-webkit-scrollbar {
     width: 10px;
@@ -113,9 +124,9 @@
 
 .nav-item:hover:after {
     z-index: -10;
-    animation: fill 1s forwards;
     -webkit-animation: fill 1s forwards;
     -moz-animation: fill 1s forwards;
+    animation: fill 1s forwards;
     opacity: 1;
 }
 
