--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+@font-face {
+    font-family: 'halcion';
+    src: url('../fonts/HalcionPersonalUseItalic-rgpLy.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Rooster';
+    src: url('../fonts/RoosterPersonalUse-3z8d8.ttf') format('truetype');
+}
+
+body {
     font-family: "Itim", cursive;
     font-weight: 400;
     font-style: normal;
